Search Result Page: fix tickets not align

--- a/src/css/SearchResults.css
+++ b/src/css/SearchResults.css
@@ -40,56 +40,56 @@
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.2);
 }
 
-.flight-search-container {
+.calculator-flights-container {
   display: flex;
-  gap: 20px;
+  align-items: flex-start;
 }
 
 .emission-calculator-container {
+  flex: 1;
+  overflow-y: auto;
   position: sticky;
   top: 100px;
-  z-index: 1;
-  flex: 1;
-  padding: 1px;
 }
 
-.flight-data-container {
+.flight-tickets-container {
   flex: 3;
-  padding: 10px;
+  overflow-y: auto;
 }
 
-.flight-container {
-  border: 1.25px solid #ccc;
+.flight-ticket {
+  border: 1px solid #ccc;
   padding: 10px;
   margin-bottom: 10px;
   cursor: pointer;
 }
 
-.flight-details {
+.flight-ticket-info {
   display: flex;
   justify-content: space-between;
   align-items: center;
 }
 
-.flight-details span {
+.flight-ticket-info span {
   flex: 1;
+}
+
+.flight-ticket-button {
+  border: none;
+  background: none;
+  font-size: 20px;
+  cursor: pointer;
 }
 
 .from-to-container {
   display: flex;
   flex-direction: column;
   align-items: center;
+  flex: 1;
 }
 
 .from-to {
   margin-bottom: 3px;
-}
-
-.flight-button {
-  border: none;
-  background: none;
-  font-size: 20px;
-  cursor: pointer;
 }
 
 .departure-ticket-container {
